# agile-assignment

./: .gitignore  Chunker .py  Config.py  Document parser.py  Documents.py  Embeddings.py  Globals.css  Page.tsx  README.md  Shareresponsebutton.tsx  Test documents.py  Vector store.py  docker-compose.yml  document_service.py  main.py  package-lock.json  package.json  play_tts.ps1  pnpm-lock.yaml
agile-assignment-master/apps/api/: .env.example  README.md  pyproject.toml
agile-assignment-master/apps/api/app/: main.py
agile-assignment-master/apps/api/app/api/: router.py
agile-assignment-master/apps/api/app/core/: responses.py
agile-assignment-master/apps/api/app/domain/: __init__.py
agile-assignment-master/apps/api/app/schemas/: common.py  documents.py  voice.py
agile-assignment-master/apps/api/app/services/: __init__.py  tts.py
agile-assignment-master/apps/api/tests/: test_placeholders.py  test_tts.py
apps/api/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  main.py
apps/api/app/api/: router.py
apps/api/app/core/: config.py  security.py
apps/api/app/domain/: models.py
apps/api/app/schemas/: auth.py  documents.py  query.py  voice.py
apps/api/app/services/: document_service.py  embedding_providers.py  interfaces.py  query_service.py  speech_to_text_service.py
apps/api/llm-bridge/: chat.py  main.py  readme.md  requirements.txt
apps/api/scripts/: setup_admin.py
apps/api/tests/: conftest.py  test_auth.py  test_cors.py  test_documents.py  test_embedding_providers.py  test_health.py  test_placeholders.py  test_public_access.py  test_query.py  test_retrieval.py  test_speech_to_text_service.py  test_tts_routes.py
(+34 files in other folders)
