[project]
name = "agile-assignment-api"
version = "0.1.0"
description = "FastAPI backend foundation for the agile assignment project."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "uvicorn>=0.32.0,<1.0.0",
  "PyJWT>=2.9.0,<3.0.0",
  "PyMuPDF>=1.24.0,<2.0.0",
  "python-multipart>=0.0.12,<1.0.0",
  "bcrypt>=4.0.0,<6.0.0",
  "chromadb>=1.0.0,<2.0.0",
  "httpx>=0.28.0,<1.0.0",
  "SpeechRecognition>=3.14.0,<4.0.0",
  "sentence-transformers>=5.4.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0,<9.0.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
  "app",
  "tests",
  "README.md",
  ".env.example"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
